Added google authentication

--- a/Web/WhitePage.MyWeb.UI/src/index.html
+++ b/Web/WhitePage.MyWeb.UI/src/index.html
@@ -5,6 +5,7 @@
     <base href="./">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="google-signin-client_id" content="612057850517-6b6b5thc6h2ua74kf3hqh08aee7uulib.apps.googleusercontent.com">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="MyChoices Case Management">
     <meta name="author" content="Łukasz Holeczek">
@@ -16,7 +17,7 @@
     <!-- Icons -->
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
     <link href="assets/css/simple-line-icons.css" rel="stylesheet">
-
+    <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
 </head>
 
 <!-- BODY options, add following classes to body to change options
