fix: changed title of the application to Peace Tracker

--- a/Web/WhitePage.MyWeb.UI/src/index.html
+++ b/Web/WhitePage.MyWeb.UI/src/index.html
@@ -7,12 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="google-signin-client_id" content="612057850517-6b6b5thc6h2ua74kf3hqh08aee7uulib.apps.googleusercontent.com">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="MyChoices Case Management">
+    <meta name="description" content="MyChoices Peace Tracker">
     <meta name="author" content="Łukasz Holeczek">
     <meta name="keyword" content="Bootstrap,Admin,Template,Open,Source,AngularJS,Angular,Angular2,jQuery,CSS,HTML,RWD,Dashboard">
     <link rel="shortcut icon" href="assets/img/favicon.png">
 
-    <title>MyChoices Case Management</title>
+    <title>MyChoices Peace Tracker</title>
 
     <!-- Icons -->
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
